[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/img/Fondos/fondo_marino.png" type="Texture" id=1]
[ext_resource path="res://assets/img/Fondos/sea.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Fondos/fondo_marino1.png" type="Texture" id=3]
[ext_resource path="res://assets/img/yellow-right.png" type="Texture" id=4]
[ext_resource path="res://Jugador.gd" type="Script" id=5]
[ext_resource path="res://Mardel-game.gd" type="Script" id=6]
[ext_resource path="res://Pez.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.5, 58.5 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -338, 397, 0, 0, 0, 0, -338, 53 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 686, 53, 0, 0, 0, 0, 686, 397 )
}

[node name="Node2D" type="Node2D"]
position = Vector2( 346, 195 )
script = ExtResource( 6 )
pez_scene = ExtResource( 7 )

[node name="Sea" type="Sprite" parent="."]
position = Vector2( 181, 9.99997 )
scale = Vector2( 0.707, 0.493 )
texture = ExtResource( 2 )

[node name="Puntaje" type="Label" parent="."]
margin_left = 264.0
margin_top = 18.0
margin_right = 304.0
margin_bottom = 32.0
rect_scale = Vector2( 3, 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 174, 108 )

[node name="FondoMarino" type="Sprite" parent="."]
position = Vector2( 622, 333 )
scale = Vector2( 0.259875, 0.223625 )
texture = ExtResource( 1 )

[node name="FondoMarino1" type="Sprite" parent="."]
position = Vector2( 41, 285 )
scale = Vector2( 0.635, 0.466488 )
texture = ExtResource( 3 )

[node name="Jugador" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador"]
position = Vector2( 1.5, -2.5 )
shape = SubResource( 1 )
disabled = true

[node name="Bote" type="Sprite" parent="Jugador"]
position = Vector2( 1.95002, -3.02501 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PezTimerIzq" type="Timer" parent="."]
wait_time = 7.0

[node name="PezTimerDer" type="Timer" parent="."]
wait_time = 10.0

[node name="PezPathIzq" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PezSpawnLocation" type="PathFollow2D" parent="PezPathIzq"]
position = Vector2( -338, 397 )
rotation = -1.5708

[node name="PezPathDer" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PezSpawnLocation" type="PathFollow2D" parent="PezPathDer"]
position = Vector2( 686, 53 )
rotation = 1.57077

[connection signal="body_entered" from="Jugador" to="Jugador" method="_on_Jugador_body_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PezTimerIzq" to="." method="_on_PezTimerIzq_timeout"]
[connection signal="timeout" from="PezTimerIzq" to="." method="_on_PezTimer_timeout"]
[connection signal="timeout" from="PezTimerDer" to="." method="_on_PezTimerDer_timeout"]
[connection signal="timeout" from="PezTimerDer" to="." method="_on_PezTimer_timeout"]
